<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@drawable/crosshair">


    <ImageView
        android:id="@+id/spot_top"
        android:layout_width="@dimen/spot_size"
        android:layout_height="@dimen/spot_size"
        android:layout_margin="@dimen/base_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/uparrow"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/spot_bottom"
        android:layout_width="@dimen/spot_size"
        android:layout_height="@dimen/spot_size"
        android:layout_marginBottom="@dimen/base_margin"
        android:alpha="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/downarrow"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/spot_right"
        android:layout_width="@dimen/spot_size"
        android:layout_height="@dimen/spot_size"
        android:layout_marginRight="@dimen/base_margin"
        android:alpha="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rightarrow"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/spot_left"
        android:layout_width="@dimen/spot_size"
        android:layout_height="@dimen/spot_size"
        android:layout_marginLeft="@dimen/base_margin"
        android:alpha="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/leftarrow"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_azimuth"
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_azimuth_string" />

            <TextView
                android:id="@+id/value_azimuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_margin"
                android:layout_marginLeft="@dimen/base_margin"
                android:layout_weight="1"
                android:text="@string/value_format"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_pitch"
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_pitch_string" />

            <TextView
                android:id="@+id/value_pitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/value_format"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_roll"
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_roll_string" />

            <TextView
                android:id="@+id/value_roll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/value_format"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <Button
            android:id="@+id/savebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:text="@string/save"
            android:onClick="save_clicked"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>